Bug 836143 - MediaDecoder should call its own OnDecodeThread for clearer error detection r=cpearce